--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sunburst — Fornecedores de lenha e cavaco - RS</title>
+  <!-- ECharts (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
   <style>
     html, body { height: 100%; margin: 0; }
@@ -12,27 +13,112 @@
 </head>
 <body>
   <div id="chart"></div>
+
   <script>
-    const data = {"name": "Caracterização de Fornecedores", "children": [{"name": "Perfil", "children": [{"name": "Silvicultor", "value": 50}, {"name": "Compra madeira em pé", "value": 10}]}, {"name": "Tamanho Propriedade", "children": [{"name": "Pequena (<10ha)", "value": 13}, {"name": "Medio (10ha<100ha)", "value": 10}, {"name": "Grande (>100ha)", "value": 7}]}, {"name": "Capacidade de Fornecimento", "children": [{"name": "Grande (> 10.000 m3/ano)", "value": 13}, {"name": "Médio (1.000 - 10.000 m3/ano)", "value": 8}, {"name": "Pouco (1-1.000 m3/ano)", "value": 9}]}, {"name": "Colheita Florestal", "children": [{"name": "Mecanizada", "value": 8}, {"name": "Semimecanizada", "value": 22}]}, {"name": "Fonte de Madeira", "children": [{"name": "Própria", "value": 13}, {"name": "Própria/Terceiros", "value": 9}, {"name": "Terceiros", "value": 8}]}]};
+    // =========================
+    // 1) DADOS (pode editar)
+    // =========================
+    const data = {
+      name: "Caracterização de Fornecedores",
+      children: [
+        { name: "Perfil", children: [
+          { name: "Silvicultor", value: 50 },
+          { name: "Compra madeira em pé", value: 10 }
+        ]},
+        { name: "Tamanho Propriedade", children: [
+          { name: "Pequena (<10ha)", value: 13 },
+          { name: "Medio (10ha<100ha)", value: 10 },
+          { name: "Grande (>100ha)", value: 7 }
+        ]},
+        { name: "Capacidade de Fornecimento", children: [
+          { name: "Grande (> 10.000 m3/ano)", value: 13 },
+          { name: "Médio (1.000 - 10.000 m3/ano)", value: 8 },
+          { name: "Pouco (1-1.000 m3/ano)", value: 9 }
+        ]},
+        { name: "Colheita Florestal", children: [
+          { name: "Mecanizada", value: 8 },
+          { name: "Semimecanizada", value: 22 }
+        ]},
+        { name: "Fonte de Madeira", children: [
+          { name: "Própria", value: 13 },
+          { name: "Própria/Terceiros", value: 9 },
+          { name: "Terceiros", value: 8 }
+        ]}
+      ]
+    };
+
+    // Paleta por tema (pode ajustar cores)
     const palette = {
       "Perfil": "#f28e2c",
-      "Tamanho Propriedade": "#9e9e9e",
+      "Tamanho Propriedade": "#6f6f6f",          // cinza mais escuro p/ dar contraste
       "Capacidade de Fornecimento": "#4d87bd",
       "Colheita Florestal": "#8bc34a",
       "Fonte de Madeira": "#8b0000"
     };
+
+    // =========================
+    // 2) UTILITÁRIOS
+    // =========================
+
+    // aplica cor do "tema" em todos os filhos
     function applyColors(node){
       if(node.children){
         node.itemStyle = node.itemStyle || {};
-        node.itemStyle.color = palette[node.name] || undefined;
+        node.itemStyle.color = palette[node.name] || node.itemStyle.color;
         node.children.forEach(c => {
           c.itemStyle = c.itemStyle || {};
-          c.itemStyle.color = palette[node.name] || undefined;
+          c.itemStyle.color = palette[node.name] || c.itemStyle.color;
           applyColors(c);
         });
       }
     }
     data.children.forEach(applyColors);
+
+    // quebra nomes longos em várias linhas (N ≈ caracteres por linha)
+    function wrapName(name, maxPerLine) {
+      if (!name) return '';
+      const words = String(name).split(' ');
+      const lines = [];
+      let cur = '';
+      for (const w of words) {
+        const test = (cur + ' ' + w).trim();
+        if (test.length > maxPerLine) {
+          if (cur) lines.push(cur.trim());
+          cur = w;
+        } else {
+          cur = test;
+        }
+      }
+      if (cur) lines.push(cur.trim());
+      return lines.join('\n');
+    }
+
+    // util: converte #RRGGBB -> luminância (0..1) para decidir cor do rótulo
+    function hexToRgb(hex) {
+      const m = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
+      return m ? [parseInt(m[1], 16), parseInt(m[2], 16), parseInt(m[3], 16)] : [0,0,0];
+    }
+    function luminance(hex) {
+      const [r,g,b] = hexToRgb(hex).map(v => {
+        v /= 255;
+        return v <= 0.03928 ? v/12.92 : Math.pow((v+0.055)/1.055, 2.4);
+      });
+      return 0.2126*r + 0.7152*g + 0.0722*b; // WCAG
+    }
+    function labelColorForTheme(themeName) {
+      const bg = palette[themeName] || "#666";
+      return luminance(bg) > 0.55 ? "#111" : "#fff"; // claro -> texto escuro; escuro -> texto claro
+    }
+
+    // retorna o nome do "tema" (anel interno) do rótulo atual
+    function themeOf(p) {
+      // treePathInfo: [root, tema, item]
+      return p && p.treePathInfo && p.treePathInfo[1] ? p.treePathInfo[1].name : undefined;
+    }
+
+    // =========================
+    // 3) GRÁFICO
+    // =========================
     const chart = echarts.init(document.getElementById('chart'));
     chart.setOption({
       title: { text: 'Caracterização de Fornecedores de lenha e cavaco - RS', left: 'center' },
@@ -42,11 +128,52 @@
         radius: [50, '90%'],
         sort: null,
         emphasis: { focus: 'ancestor' },
-        label: { rotate: 'radial', minAngle: 8 },
-        levels: [{}, { r0: 50, r: 120, label: { rotate: 0, fontWeight: 'bold', color: '#222' } }, { r0: 120, r: '90%', label: { show: true } }]
+
+        // rótulos padrão
+        label: {
+          show: true,
+          rotate: 'tangential'
+        },
+
+        // níveis (ajuste os fontSize para mais/menos)
+        levels: [
+          {}, // raiz (oculta)
+
+          // Anel dos TEMAS (Perfil, Tamanho Propriedade, ...)
+          {
+            r0: 50, r: 120,
+            label: {
+              rotate: 0,
+              fontWeight: 'bold',
+              color: '#222',
+              fontSize: 12,                 // ← diminua/aumente aqui
+              overflow: 'break',
+              lineHeight: 12,
+              formatter: p => wrapName(p.name, 18)
+            }
+          },
+
+          // Anel EXTERNO (itens/fatias)
+          {
+            r0: 120, r: '90%',
+            label: {
+              show: true,
+              rotate: 'tangential',
+              fontSize: 10,                 // ← diminua (9/8) se quiser menor
+              minAngle: 5,
+              overflow: 'break',
+              lineHeight: 12,
+              color: p => labelColorForTheme(themeOf(p)),
+              formatter: p => wrapName(p.name, 14)
+            }
+          }
+        ]
       }],
-      tooltip: { formatter: (p) => p.treePathInfo.map(d => d.name).slice(1).join(' → ') + ': ' + p.value }
+      tooltip: {
+        formatter: (p) => p.treePathInfo.map(d => d.name).slice(1).join(' → ') + ': ' + p.value
+      }
     });
+
     window.addEventListener('resize', () => chart.resize());
   </script>
 </body>
