--- a/dashboard-interativo.html
+++ b/dashboard-interativo.html
@@ -42,19 +42,20 @@
   <!-- DIREITA: INDICADOR DINÂMICO -->
   <div class="card" id="panel">
     <div class="ind-title">
-      <h1 id="indTitle">Tamanho da Propriedade</h1>
+      <h1 id="indTitle">—</h1>
       <span class="chip" id="indChip">selecionado: —</span>
     </div>
     <div class="rows" id="rows"></div>
     <div class="legend" id="legend"></div>
-    <div class="muted" style="margin-top:8px">Fonte: Caracterização de Fornecedores (seus dados)</div>
+    <div class="muted" style="margin-top:8px">Caracterização de Fornecedores (seus dados)</div>
   </div>
 </div>
 
 <script>
-  // ------------------------------
-  // DADOS (os mesmos do estudo)
-  // ------------------------------
+  // ---------- CONFIG ----------
+  const DEFAULT_THEME = "Colheita Florestal"; // Troque se quiser outro tema inicial
+
+  // ---------- DADOS ----------
   const data = {
     name: "Caracterização",
     children: [
@@ -84,26 +85,23 @@
     ]
   };
 
-  // Paleta por TEMA
-  const themeColor = {
-    "Perfil": "var(--perfil)",
-    "Tamanho Propriedade": "var(--tam)",
-    "Capacidade de Fornecimento": "var(--cap)",
-    "Colheita Florestal": "var(--col)",
-    "Fonte de Madeira": "var(--fon)"
+  // Cores do sunburst (hex explícito; ECharts não lê var(--...))
+  const themeColorHEX = {
+    "Perfil": "#f28e2c",
+    "Tamanho Propriedade": "#6f6f6f",
+    "Capacidade de Fornecimento": "#4d87bd",
+    "Colheita Florestal": "#8bc34a",
+    "Fonte de Madeira": "#8b0000"
   };
 
-  // -----------------------------------
-  // ECHARTS: SUNBURST (clique = ação)
-  // -----------------------------------
   // pinta filhos com a cor do TEMA
   function colorize(node){
     if(node.children){
       node.itemStyle = node.itemStyle || {};
-      node.itemStyle.color = themeColor[node.name] || node.itemStyle.color;
+      node.itemStyle.color = themeColorHEX[node.name] || node.itemStyle.color;
       node.children.forEach(c=>{
         c.itemStyle = c.itemStyle || {};
-        c.itemStyle.color = themeColor[node.name] || c.itemStyle.color;
+        c.itemStyle.color = themeColorHEX[node.name] || c.itemStyle.color;
       });
       node.children.forEach(colorize);
     }
@@ -123,7 +121,7 @@
       data: data.children,
       radius: [50, '90%'],
       sort: null,
-      nodeClick: false,                 // não faz drilldown
+      nodeClick: false,
       emphasis: { focus: 'self' },
       label: {
         show: true, rotate: 'tangential', minAngle: 4,
@@ -152,49 +150,55 @@
   });
 
   // ------------------------------------------------
-  // INDICADOR DINÂMICO (gera linhas + barras + %)
+  // INDICADOR DINÂMICO
   // ------------------------------------------------
   const rowsEl   = document.getElementById('rows');
   const legendEl = document.getElementById('legend');
   const titleEl  = document.getElementById('indTitle');
   const chipEl   = document.getElementById('indChip');
 
-  // Mapa para criar o indicador por TEMA
-  // (ordem das linhas e rótulos)
+  // Paleta dos painéis (pode usar var() aqui porque é CSS no DOM)
+  const colorsPanel = {
+    perfil: { a:"var(--perfil)", b:"#f7b267" },
+    tamanho: { a:"var(--tam)", b:"#8a8a8a", c:"#a3a3a3" },
+    capacidade: { a:"var(--cap)", b:"#6ba1d3", c:"#88b8e3" },
+    colheita: { a:"var(--col)", b:"#5e9e2f" },
+    fonte: { a:"var(--fon)", b:"#a63838", c:"#c25b5b" }
+  };
+
+  // ordem das linhas por tema
   const indicatorMap = {
     "Perfil": [
-      { key:"Silvicultor"           , color:"var(--perfil)" },
-      { key:"Compra madeira em pé"  , color:"#f7b267" }
+      { key:"Silvicultor",              color: colorsPanel.perfil.a },
+      { key:"Compra madeira em pé",    color: colorsPanel.perfil.b }
     ],
     "Tamanho Propriedade": [
-      { key:"Pequena (<10ha)"       , color:"var(--tam)" },
-      { key:"Médio (10ha<100ha)"    , color:"#8a8a8a"   },
-      { key:"Grande (>100ha)"       , color:"#a3a3a3"   }
+      { key:"Pequena (<10ha)",         color: colorsPanel.tamanho.a },
+      { key:"Médio (10ha<100ha)",      color: colorsPanel.tamanho.b },
+      { key:"Grande (>100ha)",         color: colorsPanel.tamanho.c }
     ],
     "Capacidade de Fornecimento": [
-      { key:"Grande (> 10.000 m3/ano)", color:"var(--cap)" },
-      { key:"Médio (1.000 - 10.000 m3/ano)", color:"#6ba1d3" },
-      { key:"Pouco (1-1.000 m3/ano)" , color:"#88b8e3" }
+      { key:"Grande (> 10.000 m3/ano)",   color: colorsPanel.capacidade.a },
+      { key:"Médio (1.000 - 10.000 m3/ano)", color: colorsPanel.capacidade.b },
+      { key:"Pouco (1-1.000 m3/ano)",      color: colorsPanel.capacidade.c }
     ],
     "Colheita Florestal": [
-      { key:"Semimecanizada" , color:"var(--col)" },
-      { key:"Mecanizada"     , color:"#5e9e2f" }
+      { key:"Semimecanizada",           color: colorsPanel.colheita.a },
+      { key:"Mecanizada",               color: colorsPanel.colheita.b }
     ],
     "Fonte de Madeira": [
-      { key:"Própria"           , color:"var(--fon)"  },
-      { key:"Própria/Terceiros" , color:"#a63838" },
-      { key:"Terceiros"         , color:"#c25b5b" }
+      { key:"Própria",                  color: colorsPanel.fonte.a },
+      { key:"Própria/Terceiros",        color: colorsPanel.fonte.b },
+      { key:"Terceiros",                color: colorsPanel.fonte.c }
     ]
   };
 
-  // procura os valores de um TEMA
   function getThemeValues(theme){
     const node = data.children.find(d=>d.name===theme);
     if(!node) return [];
     return node.children.map(c=>({ name:c.name, value:c.value }));
   }
 
-  // renderiza o indicador para um TEMA
   function renderIndicator(theme, clickedLabel){
     const defs = indicatorMap[theme]; if(!defs) return;
     const vals = getThemeValues(theme);
@@ -223,21 +227,19 @@
     });
   }
 
-  // inicial: mostra "Tamanho Propriedade"
-  renderIndicator("Tamanho Propriedade");
+  // inicial
+  renderIndicator(DEFAULT_THEME);
 
-  // clique numa fatia → pega o TEMA (nível 1) e atualiza painel
+  // clique numa fatia → atualiza painel pelo TEMA
   chart.on('click', (p)=>{
     const tpi = p.treePathInfo || [];
     const theme = tpi[1] ? tpi[1].name : p.name;
     if (indicatorMap[theme]) {
-      // rótulo clicado (útil para mostrar no chip)
       const clickedLabel = (tpi.length>=3 ? tpi[2].name : '');
       renderIndicator(theme, clickedLabel);
     }
   });
 
-  // resize
   window.addEventListener('resize', ()=>chart.resize());
 </script>
 </body>
