--- a/dashboard-interativo.html
+++ b/dashboard-interativo.html
@@ -10,21 +10,24 @@
     --bg:#f6f7fb; --card:#fff; --txt:#111;
     --perfil:#f28e2c; --tam:#6f6f6f; --cap:#4d87bd; --col:#8bc34a; --fon:#8b0000;
     --shadow:0 10px 30px rgba(0,0,0,.10);
+    --accent:#2563eb;
   }
   *{box-sizing:border-box}
   html,body{margin:0;background:var(--bg);font:500 14px/1.35 system-ui,-apple-system,Segoe UI,Roboto,Arial;color:var(--txt)}
   .layout{
     display:grid;
-    grid-template-columns: minmax(340px, 1fr) 380px; /* indicador mais estreito */
+    grid-template-columns: minmax(360px, 1fr) 340px; /* painel direito mais estreito -> pizza maior */
     gap:12px; max-width:1400px; margin:0 auto; padding:12px;
     align-items:start;
   }
   .card{background:var(--card);border-radius:14px;box-shadow:var(--shadow);padding:12px}
-  #chart{width:100%; height:clamp(360px, 66vh, 820px);} /* sem corte em embed */
+  #chart{width:100%; height:clamp(380px, 72vh, 920px);} /* mais alto para não cortar */
   h1{margin:0 0 6px;font-size:16px}
   .muted{color:#6b7280;font-size:12px}
   .ind-title{display:flex;align-items:flex-end;gap:6px}
   .chip{padding:3px 8px;border-radius:999px;background:#eef2ff;color:#334155;font-weight:600;font-size:10.5px}
+
+  /* Indicador (mesmo tamanho reduzido de antes) */
   .rows{margin-top:6px}
   .row{display:flex;align-items:center;gap:10px;margin:10px 0}
   .label{min-width:200px;font-size:12.5px;color:#374151}
@@ -33,6 +36,14 @@
   .fill{height:100%}
   .legend{display:flex;gap:12px;margin-top:8px;font-size:12px;color:#4b5563;flex-wrap:wrap}
   .dot{width:10px;height:10px;border-radius:50%}
+
+  /* Seletor interativo (abaixo do indicador) */
+  .selector{margin-top:10px;border-top:1px solid #e5e7eb;padding-top:10px}
+  .sel-title{font-weight:700;font-size:12.5px;margin:8px 0 6px;color:#111}
+  .btns{display:flex;flex-wrap:wrap;gap:6px}
+  .btn{font-size:12px;padding:6px 10px;border-radius:10px;border:1px solid #e5e7eb;background:#f8fafc;cursor:pointer}
+  .btn:hover{background:#eef2ff;border-color:#dbe3ff}
+  .btn.active{background:#e0e7ff;border-color:#c7d2fe;color:#1e293b;font-weight:700}
 </style>
 </head>
 <body>
@@ -44,7 +55,7 @@
     <div class="muted">Clique no gráfico para atualizar o indicador ao lado. Passe o mouse para ver <b>Total</b> e <b>%</b>.</div>
   </div>
 
-  <!-- DIREITA: INDICADOR DINÂMICO (fonte reduzida) -->
+  <!-- DIREITA: INDICADOR + SELETOR -->
   <div class="card" id="panel">
     <div class="ind-title">
       <h1 id="indTitle">—</h1>
@@ -53,6 +64,13 @@
     <div class="rows" id="rows"></div>
     <div class="legend" id="legend"></div>
     <div class="muted" style="margin-top:6px">Caracterização de Fornecedores (seus dados)</div>
+
+    <div class="selector">
+      <div class="sel-title">Temas</div>
+      <div class="btns" id="themeBtns"></div>
+      <div class="sel-title" style="margin-top:10px;">Itens</div>
+      <div class="btns" id="itemBtns"></div>
+    </div>
   </div>
 </div>
 
@@ -60,7 +78,7 @@
   // ---------- CONFIG ----------
   const DEFAULT_THEME = "Colheita Florestal";
 
-  // ---------- DADOS (ajustados) ----------
+  // ---------- DADOS ----------
   const data = {
     name: "Caracterização",
     children: [
@@ -124,7 +142,7 @@
     series: [{
       type: 'sunburst',
       data: data.children,
-      radius: [50, '90%'],
+      radius: [48, '93%'],   // raio ligeiramente maior
       sort: null,
       nodeClick: false,
       emphasis: { focus: 'self' },
@@ -136,14 +154,14 @@
       },
       levels: [
         {},
-        { r0:50, r:120,
+        { r0:48, r:120,
           label:{
             rotate:0,
             rich:{w:{color:'#fff',fontSize:8,lineHeight:10,textShadowColor:'rgba(0,0,0,.45)',textShadowBlur:2}},
             formatter: p=>`{w|${wrap(p.name,18)}}`
           }
         },
-        { r0:120, r:'90%',
+        { r0:120, r:'93%',
           label:{
             rotate:'tangential',
             rich:{w:{color:'#fff',fontSize:8,lineHeight:10,textShadowColor:'rgba(0,0,0,.45)',textShadowBlur:2}},
@@ -174,7 +192,7 @@
     }
   });
 
-  // -------- INDICADOR (com tipografia menor) --------
+  // -------- INDICADOR --------
   const rowsEl   = document.getElementById('rows');
   const legendEl = document.getElementById('legend');
   const titleEl  = document.getElementById('indTitle');
@@ -246,21 +264,65 @@
       lg.innerHTML = `<span class="dot" style="background:${def.color}"></span> ${def.key}`;
       legendEl.appendChild(lg);
     });
+
+    // atualiza lista de itens
+    buildItemButtons(theme, clickedLabel);
+    setActiveTheme(theme);
   }
 
-  // inicial
-  renderIndicator(DEFAULT_THEME);
-
-  // clique numa fatia → atualiza painel pelo TEMA
+  // clique na pizza → atualiza painel + botões
   chart.on('click', (p)=>{
     const tpi = p.treePathInfo || [];
     const theme = tpi[1] ? tpi[1].name : p.name;
-    if (indicatorMap[theme]) {
-      const clickedLabel = (tpi.length>=3 ? tpi[2].name : '');
-      renderIndicator(theme, clickedLabel);
-    }
+    const child = (tpi.length>=3 ? tpi[2].name : '');
+    if (indicatorMap[theme]) renderIndicator(theme, child);
   });
 
+  // -------- Seletor interativo (Temas / Itens) --------
+  const themeBtnsEl = document.getElementById('themeBtns');
+  const itemBtnsEl  = document.getElementById('itemBtns');
+
+  function setActiveTheme(theme){
+    [...themeBtnsEl.querySelectorAll('.btn')].forEach(b=>{
+      b.classList.toggle('active', b.dataset.theme === theme);
+    });
+  }
+  function setActiveItem(name){
+    [...itemBtnsEl.querySelectorAll('.btn')].forEach(b=>{
+      b.classList.toggle('active', b.textContent === name);
+    });
+  }
+
+  function buildThemeButtons(){
+    themeBtnsEl.innerHTML = '';
+    Object.keys(indicatorMap).forEach(theme=>{
+      const btn = document.createElement('button');
+      btn.className = 'btn';
+      btn.textContent = theme;
+      btn.dataset.theme = theme;
+      btn.onclick = ()=> renderIndicator(theme, '');
+      themeBtnsEl.appendChild(btn);
+    });
+  }
+
+  function buildItemButtons(theme, selectedItem){
+    itemBtnsEl.innerHTML = '';
+    const items = indicatorMap[theme] || [];
+    items.forEach(i=>{
+      const btn = document.createElement('button');
+      btn.className = 'btn';
+      btn.textContent = i.key;
+      btn.onclick = ()=> { chipEl.textContent = `selecionado: ${i.key}`; setActiveItem(i.key); };
+      itemBtnsEl.appendChild(btn);
+    });
+    setActiveItem(selectedItem||'');
+  }
+
+  // inicial
+  buildThemeButtons();
+  renderIndicator(DEFAULT_THEME);
+
+  // resize
   window.addEventListener('resize', ()=>chart.resize());
 </script>
 </body>
